テストデータを整形

--- a/src/test/resources/testhtml/playdata.htm
+++ b/src/test/resources/testhtml/playdata.htm
@@ -119,11 +119,11 @@ z-index: 1005;
 
 
 
-	
+
 <p class="btnTwitter">
-	
+
 		<a title="twitter" href="http://card.dartslive.com/t/tweet.jsp"><span class="icon">twitter</span></a>
-	
+
 </p>
 
 </div><!-- /#headerArea -->
@@ -222,33 +222,14 @@ z-index: 1005;
 				</tbody></table>
 <h2>Results</h2>
 		<ul class="result">
-			<h3 class="result01">701</h3><li class="resultLi">
-					<ul class="gameList">
-						<li class="doubles">
-							<div class="globalMatch"></div><div class="crown"></div><div class="name">蛇太郎[衰退中]<div class="belong">
-													<div class="belong_country">
-													千葉県</div>
-													<div class="belong_shop">ｼﾞｮｲﾌﾟﾗｻﾞ印西店</div>
-													</div>
-												</div>
-											<div class="point">
-												103.00</div>
-										</li>
-						<li class="singles">
-							<div class="noCrown">2</div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											84.83</div>
-									</li>
-						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
+			<h3 class="result01">701</h3>
 			<li class="resultLi">
 					<ul class="gameList">
 						<li class="singles">
 							<div class="globalMatch"></div><div class="crown"></div><div class="name own">
 											たけを＠紫推し</div>
 										<div class="point own">
-											107.83</div>
+											100.00</div>
 									</li>
 						<li class="doubles">
 							<div class="noCrown">2</div><div class="name">(ry<div class="belong">
@@ -262,73 +243,25 @@ z-index: 1005;
 										</li>
 						</ul><!--/.gameList  -->
 				</li><!--/.resultLi  -->
-			<h3 class="result01">1501</h3><li class="resultLi">
-					<ul class="gameList">
-						<li class="singles">
-							<div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											104.75</div>
-									</li>
-						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
+			<h3 class="result01">1501</h3>
 			<li class="resultLi">
 					<ul class="gameList">
 						<li class="singles">
 							<div class="crown"></div><div class="name own">
 											たけを＠紫推し</div>
 										<div class="point own">
-											87.79</div>
+											100.00</div>
 									</li>
 						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
-			<li class="resultLi">
-					<ul class="gameList">
-						<li class="singles">
-							<div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											76.94</div>
-									</li>
-						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
-			<li class="resultLi">
-					<ul class="gameList">
-						<li class="singles">
-							<div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											78.69</div>
-									</li>
-						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
-			<h3 class="resultCri">STANDARD CRICKET</h3><li class="resultLi">
-					<ul class="gameList">
-						<li class="singles">
-							<div class="globalMatch"></div><div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											3.13</div>
-									</li>
-						<li class="doubles">
-							<div class="noCrown">2</div><div class="name">TATSUYA THE 396<div class="belong">
-													<div class="belong_country">
-													岩手県</div>
-													<div class="belong_shop">みらい夢　盛岡南店</div>
-													</div>
-												</div>
-											<div class="point">
-												3.13</div>
-										</li>
-						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
+			</li><!--/.resultLi  -->
+			<h3 class="resultCri">STANDARD CRICKET</h3>
 			<li class="resultLi">
 					<ul class="gameList">
 						<li class="singles">
 							<div class="globalMatch"></div><div class="crown"></div><div class="name own">
 											たけを＠紫推し</div>
 										<div class="point own">
-											3.64</div>
+											3.00</div>
 									</li>
 						<li class="doubles">
 							<div class="noCrown">2</div><div class="name">- NABE★KAZU -<div class="belong">
@@ -348,17 +281,7 @@ z-index: 1005;
 							<div class="crown"></div><div class="name own">
 											たけを＠紫推し</div>
 										<div class="point own">
-											485</div>
-									</li>
-						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
-			<li class="resultLi">
-					<ul class="gameList">
-						<li class="singles">
-							<div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											552</div>
+											1000</div>
 									</li>
 						</ul><!--/.gameList  -->
 				</li><!--/.resultLi  -->
@@ -368,7 +291,7 @@ z-index: 1005;
 							<div class="crown"></div><div class="name own">
 											たけを＠紫推し</div>
 										<div class="point own">
-											196</div>
+											200</div>
 									</li>
 						</ul><!--/.gameList  -->
 				</li><!--/.resultLi  -->
