テストデータ整形

--- a/src/test/resources/testhtml/playdata.htm
+++ b/src/test/resources/testhtml/playdata.htm
@@ -220,82 +220,80 @@ z-index: 1005;
 					<td>86</td>
 					</tr>
 				</tbody></table>
-<h2>Results</h2>
+		<h2>Results</h2>
 		<ul class="result">
 			<h3 class="result01">701</h3>
 			<li class="resultLi">
 					<ul class="gameList">
 						<li class="singles">
-							<div class="globalMatch"></div><div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											100.00</div>
-									</li>
+							<div class="globalMatch"></div><div class="crown"></div>
+							<div class="name own">たけを＠紫推し</div>
+							<div class="point own">100.00</div>
+						</li>
 						<li class="doubles">
-							<div class="noCrown">2</div><div class="name">(ry<div class="belong">
-													<div class="belong_country">
-													神奈川県</div>
-													<div class="belong_shop">ピアッツァ</div>
-													</div>
-												</div>
-											<div class="point">
-												87.50</div>
-										</li>
-						</ul><!--/.gameList  -->
-				</li><!--/.resultLi  -->
+							<div class="noCrown">2</div>
+							<div class="name">(ry
+								<div class="belong">
+									<div class="belong_country">神奈川県</div>
+									<div class="belong_shop">ピアッツァ</div>
+								</div>
+							</div>
+							<div class="point">87.50</div>
+						</li>
+					</ul><!--/.gameList  -->
+			</li><!--/.resultLi  -->
 			<h3 class="result01">1501</h3>
 			<li class="resultLi">
-					<ul class="gameList">
-						<li class="singles">
-							<div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											100.00</div>
-									</li>
-						</ul><!--/.gameList  -->
+				<ul class="gameList">
+					<li class="singles">
+						<div class="crown"></div>
+						<div class="name own">たけを＠紫推し</div>
+						<div class="point own">100.00</div>
+					</li>
+				</ul><!--/.gameList  -->
 			</li><!--/.resultLi  -->
 			<h3 class="resultCri">STANDARD CRICKET</h3>
-			<li class="resultLi">
+				<li class="resultLi">
 					<ul class="gameList">
 						<li class="singles">
-							<div class="globalMatch"></div><div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											3.00</div>
-									</li>
+							<div class="globalMatch"></div>
+							<div class="crown"></div>
+							<div class="name own">たけを＠紫推し</div>
+							<div class="point own">3.00</div>
+						</li>
 						<li class="doubles">
-							<div class="noCrown">2</div><div class="name">- NABE★KAZU -<div class="belong">
-													<div class="belong_country">
-													千葉県</div>
-													<div class="belong_shop">快活CLUB東金</div>
-													</div>
-												</div>
-											<div class="point">
-												2.73</div>
-										</li>
-						</ul><!--/.gameList  -->
+							<div class="noCrown">2</div>
+							<div class="name">- NABE★KAZU -
+								<div class="belong">
+									<div class="belong_country">千葉県</div>
+									<div class="belong_shop">快活CLUB東金</div>
+								</div>
+							</div>
+							<div class="point">2.73</div>
+						</li>
+					</ul><!--/.gameList  -->
 				</li><!--/.resultLi  -->
-			<h3 class="resultPra">COUNT-UP</h3><li class="resultLi">
+			<h3 class="resultPra">COUNT-UP</h3>
+				<li class="resultLi">
 					<ul class="gameList">
 						<li class="singles">
-							<div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											1000</div>
-									</li>
-						</ul><!--/.gameList  -->
+							<div class="crown"></div>
+							<div class="name own">たけを＠紫推し</div>
+							<div class="point own">1000</div>
+						</li>
+					</ul><!--/.gameList  -->
 				</li><!--/.resultLi  -->
-			<h3 class="resultPra">CRICKET COUNT-UP</h3><li class="resultLi">
+			<h3 class="resultPra">CRICKET COUNT-UP</h3>
+				<li class="resultLi">
 					<ul class="gameList">
 						<li class="singles">
-							<div class="crown"></div><div class="name own">
-											たけを＠紫推し</div>
-										<div class="point own">
-											200</div>
-									</li>
-						</ul><!--/.gameList  -->
+							<div class="crown"></div>
+							<div class="name own">たけを＠紫推し</div>
+							<div class="point own">200</div>
+						</li>
+					</ul><!--/.gameList  -->
 				</li><!--/.resultLi  -->
-			</ul>
+		</ul>
 	</div>
 <!-- /#yesterday --></div>
 <!-- 昨日のプレイデータ ここまで -->
